Feat: add column senha in Cliente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.application.name=backend-projeto-integrador
+spring.application.name=techpet_db
 spring.profiles.active=test 
 spring.jpa.open-in-view=true
+
+server.port=8080
